[package]
name = "minireq"
version = "0.5.0"
edition = "2021"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
license = "MIT"
description = "Lightweight support for MQTT-based request/response handling interfaces"
keywords = ["request", "embedded", "no_std", "configuration", "mqtt"]
categories = ["no-std", "config", "embedded", "parsing"]
repository = "https://github.com/quartiq/minireq"

[dependencies]
minimq = { version = "0.10.0" }
heapless = {version = "0.8", features = ["serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"], default-features = false }
smlang = "0.6"
embedded-io = "0.6"

[dev-dependencies]
std-embedded-time = "0.1"
tokio = { version = "1.9", features = ["rt-multi-thread", "time", "macros"] }
env_logger = "0.10"
embedded-nal = "0.8"
serde-json-core = "0.5"
std-embedded-nal = { git = "https://gitlab.com/ryan-summers/std-embedded-nal", branch = "feature/0.8" }
